--- a/SmallHoneybee/SmallHoneybee.Wpf/MainWindow.xaml
+++ b/SmallHoneybee/SmallHoneybee.Wpf/MainWindow.xaml
@@ -3,10 +3,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:props="clr-namespace:SmallHoneybee.Wpf.Properties"
         Title="{x:Static props:Resources.SystemName}"
-        Background="#FFC9CBD3" BorderBrush="#FF293955" WindowStartupLocation="CenterScreen" 
+        BorderBrush="#FF293955" WindowStartupLocation="CenterScreen" 
         Icon="/SmallHoneybee.Wpf;component/images/ico_samllhoneybee.ico" MinWidth="1024"
         xmlns:convert="clr-namespace:SmallHoneybee.Wpf.Common.PropertyConvert"
-        MinHeight="760" FontWeight="Normal">
+        MinHeight="768" FontWeight="Normal" WindowState="Maximized">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -15,7 +15,7 @@
             <convert:VisibilityConverter x:Key="VisibilityConverter"></convert:VisibilityConverter>
         </ResourceDictionary>
     </Window.Resources>
-    <Grid Background="#FFE7EAF3">
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="0"></RowDefinition>
             <RowDefinition Height="60"></RowDefinition>
@@ -30,34 +30,42 @@
         </Grid.ColumnDefinitions>
         <Grid Grid.Column="0" Grid.Row="0">
         </Grid>
-        <StackPanel Grid.Row="1">
-            <Menu x:Name="SamllHoneybeeMenu" Height="40" FontSize="20" Margin="10,5" Background="#FFC9CBD3">
-                <MenuItem x:Name="SamllHoneybeeSaleOrderMenu" Header="零售管理" 
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1000*"/>
+                <ColumnDefinition Width="200"/>
+            </Grid.ColumnDefinitions>
+            <StackPanel Grid.Column="0" Grid.Row="0">
+                <Menu x:Name="SamllHoneybeeMenu" Height="40" FontSize="20" Margin="10,5" Background="#FFC9CBD3">
+                    <MenuItem x:Name="SamllHoneybeeSaleOrderMenu" Header="零售管理" 
                           Visibility="{Binding Path=CurrentUserRolePermission.SaleOrderView,Converter={StaticResource VisibilityConverter}}"
                           Click="RTReportMenuNavigation_Click">
-                </MenuItem>
-                <MenuItem x:Name="SamllHoneybeeProduceMenu" Header="商品管理" 
+                    </MenuItem>
+                    <MenuItem x:Name="SamllHoneybeeProduceMenu" Header="商品管理" 
                           Visibility="{Binding Path=CurrentUserRolePermission.ProduceView,Converter={StaticResource VisibilityConverter}}"
                           Click="HSReportMenuNavigation_Click" >
-                </MenuItem>
-                <MenuItem Header="订货管理"  x:Name="SamllHoneybeePurchaseOrderMenu" 
+                    </MenuItem>
+                    <MenuItem Header="订货管理"  x:Name="SamllHoneybeePurchaseOrderMenu" 
                           Visibility="{Binding Path=CurrentUserRolePermission.PurchaseOrderView,Converter={StaticResource VisibilityConverter}}"
                           Click="PollutePortMenuNavigation_Click">
-                </MenuItem>
-                <MenuItem x:Name="SamllHoneybeeUserMenu" Header="会员管理" 
+                    </MenuItem>
+                    <MenuItem x:Name="SamllHoneybeeUserMenu" Header="会员管理" 
                           Visibility="{Binding Path=CurrentUserRolePermission.UserView,Converter={StaticResource VisibilityConverter}}"
                           Click="ServiceCommMenuNavigation_Click" >
-                </MenuItem>
-                <MenuItem x:Name="SamllHoneybeeDayBookMenu" Header="日常开支" 
+                    </MenuItem>
+                    <MenuItem x:Name="SamllHoneybeeDayBookMenu" Header="日常开支" 
                           Visibility="{Binding Path=CurrentUserRolePermission.DayBookView,Converter={StaticResource VisibilityConverter}}"
                           Click="SamllHoneybeeDayBookMenu_OnClick" >
-                </MenuItem>
-                <MenuItem x:Name="SamllHoneybeeSystemSettingMenu" Header="系统设置" 
+                    </MenuItem>
+                    <MenuItem x:Name="SamllHoneybeeSystemSettingMenu" Header="系统设置" 
                           Visibility="{Binding Path=CurrentUserRolePermission.SystemSettingView,Converter={StaticResource VisibilityConverter}}"
                           Click="SamllHoneybeeSystemSettingMenu_OnClick" >
-                </MenuItem>
-            </Menu>
-        </StackPanel>
+                    </MenuItem>
+                </Menu>
+            </StackPanel>
+            <TextBlock Grid.Column="1" Grid.Row="0" Height="40" FontSize="18" Name="TxtCurrentUser" Background="#FFC1F396" VerticalAlignment="Center" FontWeight="Bold" Padding="5,8" Foreground="#FFFFFF"></TextBlock>
+        </Grid>
+            
         <Viewbox Grid.Column="0" Grid.Row="2" Stretch="Fill"/>
         <GridSplitter HorizontalAlignment="Stretch" Grid.Column="0" Grid.Row="3" Margin="0,0,0,1" AllowDrop="False" />
         <Grid Grid.Column="0" Grid.Row="4" Margin="15,5">
