--- a/SmallHoneybee/SmallHoneybee.Wpf/Resources/Style.xaml
+++ b/SmallHoneybee/SmallHoneybee.Wpf/Resources/Style.xaml
@@ -25,6 +25,12 @@
 
     <Style TargetType="{x:Type StackPanel}">
         <Setter Property="Margin" Value="5" />
+        <Style.Triggers>
+            <Trigger Property="IsVisible" Value="False">
+                <Setter Property="Width" Value="0" />
+                <Setter Property="Margin" Value="0" />
+            </Trigger>
+        </Style.Triggers>
     </Style>
 
     <Style TargetType="{x:Type PasswordBox}" BasedOn="{StaticResource BaseStyle}">
@@ -63,13 +69,13 @@
     </Style>
     <Style x:Key="MarkedTextStyle" TargetType="{x:Type TextBox}" BasedOn="{StaticResource CommonTextStyle}">
         <Setter Property="FontWeight" Value="Bold" />
-        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="FontSize" Value="20"/>
         <Style.Triggers>
             <Trigger Property="IsEnabled" Value="True">
                 <Setter Property="Control.Foreground" Value="#FF90929C"/>
             </Trigger>
             <Trigger Property="IsEnabled" Value="False">
-                <Setter Property="Control.Background" Value="#FFE43030"/>
+                <Setter Property="Control.Foreground" Value="#FFE43030"/>
             </Trigger>
         </Style.Triggers>
     </Style>
